# blt

./: .gitignore  Doxyfile  LICENSE  README.md  RELEASE.md  Setup.hs  blt.cabal  bootstrap.sh  setup_env.sh.example
doc/c-api/html/: README_8md.html  annotated.html  blt_8cc.html  blt_8cc__incl.map  blt_8cc__incl.md5  blt_8cc_a26b247c3615ae363d1551febbfef7f41_icgraph.md5  blt_8cc_a30fe6ddf0a9781bb7e6c15de980d6f3b_cgraph.md5  blt_8cc_a39516c98426a247175b35d7ea0142b28_cgraph.md5  blt_8cc_a3b8458efde8afed94cd735198cc40776_icgraph.map  blt_8h.html  (+489 more)
doc/haskell/: BLT-Binding.html  blt.haddock  doc-index.html  index-frames.html  index.html  mini_BLT-Binding.html
libblt/: .gitignore  Makefile  blt.cc  blt.h  closest.cc  closest.h  codes.h  config.mk.example  context.cc  context.h  coverage_20140520.html  coverage_20151002.html  debug.h  error.h  expr.cc  expr.h  glpk_wrapper.cc  glpk_wrapper.h  latcon2bilp.cc  ntl_wrapper.cc  ntl_wrapper.h  parser.cc  parser.h  run_blt.cc  run_tests.sh  test_blt.c  test_blt.h  test_closest.cc  test_compare_glpk_yices.cc  test_context.cc  test_expr.cc  test_glpk.cc  test_ntl.cc  test_parser.cc  test_regression.cc  test_yices.cc  types.h  util.cc  util.h  yices_stub.c  (+4 more)
publications/2015_smt/: .gitignore  Makefile  bcp.tex  blt-paper.bib  blt-paper.tex  decision-procedure.tex  easychair.cls  introduction.tex  jpeg.tex  related.tex
src/BLT/: Binding.hs  Internal.hsc
test/: QCTests.hs  Test.hs  UnitTests.hs
test/data/: convert.sh  lattice_95.tst  pentagon.bilp  pentagon.con  pentagon.lat  test_4x4.bilp  test_4x4.con  test_4x4.lat  test_50.bilp  test_50.con  test_50.lat  test_50_8.con  test_50_8.lat  test_95.bilp  test_95.lat
(+92 files in other folders)
